tests/machine/x/c/group_by_having.c
// Generated by Mochi compiler v0.10.27 on 2006-01-02T15:04:05Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  int *data;
} list_int;
static list_int list_int_create(int len) {
  list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  double *data;
} list_float;
static list_float list_float_create(int len) {
  list_float l;
  l.len = len;
  l.data = calloc(len, sizeof(double));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
typedef struct {
  int len;
  list_int *data;
} list_list_int;
static list_list_int list_list_int_create(int len) {
  list_list_int l;
  l.len = len;
  l.data = calloc(len, sizeof(list_int));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static void _json_int(int v) { printf("%d", v); }
static void _json_float(double v) { printf("%g", v); }
static void _json_string(char *s) { printf("\"%s\"", s); }
static void _json_list_int(list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_int(v.data[i]);
  }
  printf("]");
}
static void _json_list_float(list_float v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_float(v.data[i]);
  }
  printf("]");
}
static void _json_list_string(list_string v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_string(v.data[i]);
  }
  printf("]");
}
static void _json_list_list_int(list_list_int v) {
  printf("[");
  for (int i = 0; i < v.len; i++) {
    if (i > 0)
      printf(",");
    _json_list_int(v.data[i]);
  }
  printf("]");
}
typedef struct {
  char *key;
  list_int items;
} _GroupString;
typedef struct {
  int len;
  int cap;
  _GroupString *data;
} list_group_string;
static list_group_string _group_by_string(list_string src) {
  list_group_string res;
  res.len = 0;
  res.cap = 0;
  res.data = NULL;
  for (int i = 0; i < src.len; i++) {
    char *key = src.data[i];
    int idx = -1;
    for (int j = 0; j < res.len; j++)
      if (strcmp(res.data[j].key, key) == 0) {
        idx = j;
        break;
      }
    if (idx == -1) {
      if (res.len >= res.cap) {
        res.cap = res.cap ? res.cap * 2 : 4;
        res.data =
            (_GroupString *)realloc(res.data, sizeof(_GroupString) * res.cap);
      }
      res.data[res.len].key = key;
      res.data[res.len].items = list_int_create(0);
      idx = res.len++;
    }
    _GroupString *g = &res.data[idx];
    g->items.data =
        (int *)realloc(g->items.data, sizeof(int) * (g->items.len + 1));
    g->items.data[g->items.len++] = i;
  }
  return res;
}
typedef struct {
  const char *name;
  const char *city;
} people_t;
typedef struct {
  int len;
  people_t *data;
} people_list_t;
people_list_t create_people_list(int len) {
  people_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(people_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  const char *city;
  int num;
} big_item_t;
typedef struct {
  int len;
  big_item_t *data;
} big_item_list_t;
big_item_list_t create_big_item_list(int len) {
  big_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(big_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int _mochi_main() {
  people_t people[] = {(people_t){.name = "Alice", .city = "Paris"},
                       (people_t){.name = "Bob", .city = "Hanoi"},
                       (people_t){.name = "Charlie", .city = "Paris"},
                       (people_t){.name = "Diana", .city = "Hanoi"},
                       (people_t){.name = "Eve", .city = "Paris"},
                       (people_t){.name = "Frank", .city = "Hanoi"},
                       (people_t){.name = "George", .city = "Paris"}};
  int people_len = sizeof(people) / sizeof(people[0]);
  people_list_t tmp1 = create_people_list(people_len);
  list_string tmp2 = list_string_create(people_len);
  int tmp3 = 0;
  for (int i4 = 0; i4 < people_len; i4++) {
    people_t p = people[i4];
    tmp1.data[tmp3] = p;
    tmp2.data[tmp3] = p.city;
    tmp3++;
  }
  tmp1.len = tmp3;
  tmp2.len = tmp3;
  list_group_string tmp5 = _group_by_string(tmp2);
  big_item_list_t tmp6 = create_big_item_list(tmp5.len);
  int tmp7 = 0;
  for (int gi = 0; gi < tmp5.len; gi++) {
    _GroupString _gp = tmp5.data[gi];
    people_list_t tmp8 = people_list_t_create(_gp.items.len);
    for (int i9 = 0; i9 < _gp.items.len; i9++) {
      tmp8.data[i9] = tmp1.data[_gp.items.data[i9]];
    }
    tmp8.len = _gp.items.len;
    struct {
      char *key;
      people_list_t items;
    } g = {_gp.key, tmp8};
    if (!(g.items.len >= 4)) {
      continue;
    }
    tmp6.data[tmp7] = (big_item_t){.city = g.key, .num = g.items.len};
    tmp7++;
  }
  tmp6.len = tmp7;
  big_item_list_t big = tmp6;
  printf("[");
  for (int i10 = 0; i10 < big.len; i10++) {
    if (i10 > 0)
      printf(",");
    big_item_t it = big.data[i10];
    printf("{");
    _json_string("city");
    printf(":");
    _json_string(it.city);
    printf(",");
    _json_string("num");
    printf(":");
    _json_int(it.num);
    printf("}");
  }
  printf("]");
  return 0;
}
int main() { return _mochi_main(); }
